--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,68 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+header {
+  height: 100px;
+  background-color: #080B12;
+}
+
+footer {
+  height: 100px;
+  background-color: #282828;
+}
+
+main {
+  height: calc(100vh - 100px);
+  background-color: silver;
+  display: flex;
+}
+
+#sidebar {
+  width: 250px;
+  background-color: black;
+  height: 100%;
+}
+
+#sidebar .logo {
+  padding: 20px;
+  padding-right: 70px;
+}
+
+#content {
+  height: 100%;
+  width: calc(100vw - 250px);
+  background-color: #141922;
+  color: white;
+  overflow-y: auto;
+}
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.col-18 {
+  width: calc(100% / 6 - 10px);
+  background-color: bisque;
+  color: black;
+}
+
+.menu ul li {
+  color: white;
+  padding-top: 20px;
+}
+
+.menu ul li i {
+  font-size: 30px;
+}
