--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,7 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-header {
-  height: 100px;
-  background-color: #080B12;
-}
+
 
 footer {
   height: 100px;
@@ -43,6 +40,12 @@ main {
   overflow-y: auto;
 }
 
+.header {
+  height: 100px;
+  background-color: #080B12;
+  text-align: end;
+}
+
 .container {
   width: 1200px;
   margin: 0 auto;
@@ -56,15 +59,50 @@ main {
 
 .col-18 {
   width: calc(100% / 6 - 10px);
-  background-color: bisque;
-  color: black;
+  color: gray;
 }
 
 .menu ul li {
-  color: white;
+  color: gray;
   padding-top: 20px;
 }
 
 .menu ul li i {
   font-size: 30px;
+}
+
+.playlist h2 {
+  color: white;
+  margin-top: 30px;
+}
+
+.playlist ul {
+  color: gray;
+}
+
+.playlist ul i {
+  color: black;
+  background-color: gray;
+  padding: 5px;
+  font-size: 30px;
+}
+
+.playlist ul li {
+  padding-top: 20px;
+}
+
+.header a {
+  color: white;
+  text-decoration: none;
+  border: 1px solid white;
+  border-radius: 30px;
+  padding: 10px 30px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.py-20 {
+  padding: 20px 0;
 }
