--- a/css/style.css
+++ b/css/style.css
@@ -54,12 +54,20 @@ main {
 .row {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
 }
 
 .col-18 {
-  width: calc(100% / 6 - 10px);
+  width: calc(100% / 6);
   color: gray;
+}
+
+.col-20 {
+  width: 20%;
+  height: 100px;
+}
+
+.col-60 {
+  width: 60%;
 }
 
 .menu ul li {
@@ -133,6 +141,10 @@ main {
   border-radius: 50%;
 }
 
+.song-playing {
+  width: 70px;
+  float: left;
+}
 
 /* utility */
 .text-center {
@@ -147,6 +159,22 @@ main {
   padding: 20px 0;
 }
 
+.px-10 {
+  padding: 0px 10px;
+}
+
 .p-20 {
   padding: 20px;
+}
+
+.p-10 {
+  padding: 10px;
+}
+
+.display-flex {
+  display: flex;
+}
+
+.align-center {
+  align-items: center
 }
