--- a/css/style.css
+++ b/css/style.css
@@ -156,8 +156,12 @@ main {
   color: white;
 }
 
-.cover-song {
+.cover-song img {
   width: 200px;
+}
+
+.cover-song .fa-circle-play {
+  transform: translate(-50%, -50%);
 }
 
 .popular .cover-song {
@@ -300,4 +304,27 @@ main {
 .footer-sidebar {
   display: flex;
   justify-content: center;
+}
+
+.cover-song {
+  position: relative;
+}
+
+.overlay {
+  font-size: 60px;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.cover-song:hover .overlay {
+  opacity: 1;
+  cursor: pointer;
 }
