--- a/css/style.css
+++ b/css/style.css
@@ -316,10 +316,12 @@ main {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   opacity: 0;
   transition: 0.3s;
 }
